GNOME Bugzilla – Bug 755053
Fix gtk-clutter-events on X11/GDK-X11 backends
Last modified: 2015-09-15 11:13:35 UTC
Ensure the stage is realized as soon as the widget is realized.
Created attachment 311350 [details] [review] embed: realize stage when realize widget Ensure backward compatibility in case someone access the stage before we map/show the embedding GtkWidget.
Thanks for the quick fix. Attachment 311350 [details] pushed as 0efc95c - embed: realize stage when realize widget