embed: realize stage when realize widget

Ensure backward compatibility in case someone access the stage before we
map/show the embedding GtkWidget.

https://bugzilla.gnome.org/show_bug.cgi?id=755053